--- a/src/dray/CMakeLists.txt
+++ b/src/dray/CMakeLists.txt
@@ -6,6 +6,7 @@ set(dray_headers dray.hpp
                  array_internals_base.hpp
                  array_registry.hpp
                  array_utils.hpp
+                 bounds_map.hpp
                  collection.hpp
                  color_map.hpp
                  color_table.hpp
@@ -126,6 +127,7 @@ set(dray_sources dray.cpp
                  array_internals.cpp
                  array_internals_base.cpp
                  array_registry.cpp
+                 bounds_map.cpp
                  collection.cpp
                  color_map.cpp
                  color_table.cpp
