--- a/src/dray/CMakeLists.txt
+++ b/src/dray/CMakeLists.txt
@@ -68,6 +68,7 @@ set(dray_headers dray.hpp
                  rendering/text_annotator.hpp
                  rendering/volume.hpp
                  rendering/volume_partial.hpp
+                 rendering/domain_sampler.hpp
                  rendering/volume_sampler.hpp
                  rendering/volume_shader.hpp
 
@@ -173,6 +174,7 @@ set(dray_sources dray.cpp
                  rendering/surface.cpp
                  rendering/text_annotator.cpp
                  rendering/volume.cpp
+                 rendering/domain_sampler.cpp
                  rendering/volume_sampler.cpp
                  rendering/volume_partial.cpp
 
